--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,13 @@
+# Database
 DB_HOST=localhost
 DB_NAME=refugio_mascotas
 DB_USER=root
 DB_PASSWORD=root
+
+# Security
+SECRET_KEY=tu_secret_key_muy_largo_y_seguro
+API_KEYS_ENABLED=false
+
+# External APIs
+DOG_API_URL=https://dog.ceo/api
+CAT_API_URL=https://catfact.ninja
