--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,10 +37,11 @@ jobs:
           
       - name: Test Docker container
         run: |
-          docker-compose up -d
+          docker compose up -d
           sleep 30
           curl -f http://localhost:8001/health || exit 1
-          docker-compose down
+          docker compose down
+
 
   deploy:
     needs: build
