--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: mysql:8.0
@@ -10,12 +8,17 @@ services:
       MYSQL_USER: refugio_user
       MYSQL_PASSWORD: refugio_pass
     ports:
-      - "3306:3306"
+      - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
       - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - refugio_network
+    command: --default-authentication-plugin=mysql_native_password
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
 
   backend:
     build: .
@@ -25,14 +28,18 @@ services:
       - DB_NAME=refugio_mascotas
       - DB_USER=refugio_user
       - DB_PASSWORD=refugio_pass
+      - DB_PORT=3306
+      - SECRET_KEY=desarrollo_secret_key_muy_largo_y_seguro
     ports:
       - "8001:8001"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     volumes:
       - ./backend/uploads:/app/uploads
     networks:
       - refugio_network
+    restart: unless-stopped
 
   frontend:
     image: nginx:alpine
